<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="match_parent" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		homescreen
	 *	@date 		Friday 09th of December 2022 02:51:48 PM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->


		<RelativeLayout android:id="@+id/content_container"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >


			<RelativeLayout
				android:id="@+id/page_personal_tax_screen_ek1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_marginBottom="0dp">

				<!--				<View-->
				<!--					android:id="@+id/_bg__personal_tax_screen_ek2"-->
				<!--					android:layout_width="match_parent"-->
				<!--					android:layout_height="wrap_content"-->
				<!--					android:layout_marginStart="0dp"-->
				<!--					android:layout_marginTop="0dp"-->
				<!--					 />-->


				<RelativeLayout
					android:id="@+id/content_pt"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@+id/personal_tax_title"
					android:layout_centerHorizontal="true"
					android:layout_marginTop="14dp">


					<RelativeLayout
						android:id="@+id/content_ct"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:layout_marginTop="10dp">

						<!--						<TextView-->
						<!--							android:id="@+id/our_personal_tax_accountant_take_care_of_your_accounting_needs_and_ensure_____we_ensure_maximum_refunds_with_guaranteed_accuracy_and_confidentiality__we_prepare_and_file_your_tax_returns_electronically__ensuring_maximum_tax_benefits__kta_has_been_providing_these_services_for_over_a_decade__maintaining_a_good_reputation_and_professionalism_to_our_clients__we_provide_free_after_tax_return_services_to_our_valuable_clients_year_round__our_prices_are_very_reasonable__while_never_compromising_on_quality_"-->
						<!--							android:layout_width="334dp"-->
						<!--							android:layout_height="234dp"-->
						<!--							android:layout_marginLeft="8dp"-->
						<!--							android:layout_marginTop="10dp"-->
						<!--							android:fontFamily="Inter"-->
						<!--							android:text="@string/pr_intro"-->
						<!--							android:textColor="@color/individual___corporates_accounting_services_color"-->
						<!--							android:textSize="14sp" />-->
						<TextView
							android:id="@+id/our_personal_tax_accountant_take_care_of_your_accounting_needs_and_ensure_____we_ensure_maximum_refunds_with_guaranteed_accuracy_and_confidentiality__we_prepare_and_file_your_tax_returns_electronically__ensuring_maximum_tax_benefits__kta_has_been_providing_these_services_for_over_a_decade__maintaining_a_good_reputation_and_professionalism_to_our_clients__we_provide_free_after_tax_return_services_to_our_valuable_clients_year_round__our_prices_are_very_reasonable__while_never_compromising_on_quality_"
							android:layout_width="311dp"
							android:layout_height="wrap_content"
							android:layout_centerHorizontal="true"
							android:fontFamily="@new"
							android:gravity="center"
							android:lineSpacingExtra="10sp"
							android:text="@string/pr_intro"
							android:textColor="@color/individual___corporates_accounting_services_color"
							android:textSize="16sp" />

					</RelativeLayout>

				</RelativeLayout>

				<RelativeLayout
					android:id="@+id/frameforgettouch"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/personal_tax_services"
					android:background="@drawable/baclground_pt">
					//LETS TALK

					<RelativeLayout
						android:id="@+id/letstalk"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="17dp"
						android:layout_marginTop="15dp">

						<TextView
							android:id="@+id/let_s_talk"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:fontFamily="@new"
							android:gravity="center"
							android:text="@string/let_s_talk_string"
							android:textColor="@color/individual___corporates_accounting_services_color"
							android:textSize="16sp" />

					</RelativeLayout>

					// GET IN TOUCH

					<RelativeLayout
						android:id="@+id/get_in_touch"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@+id/letstalk"
						android:layout_marginStart="40dp"
						android:layout_marginTop="5dp">

						<TextView
							android:id="@+id/get_in_touch_"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:fontFamily="Inter"
							android:text="@string/get_in_touch__string"
							android:textColor="@color/individual___corporates_accounting_services_color"
							android:textSize="16sp"
							android:textStyle="bold" />

					</RelativeLayout>

					//SCHEDULE APPOINTMTNT

					<RelativeLayout
						android:id="@+id/sch_appoinmnt"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@+id/get_in_touch"
						android:layout_centerHorizontal="true"
						android:layout_marginTop="20dp"
						android:background="@drawable/schedule_appointmtnt_btn">

						<TextView
							android:id="@+id/schedule_an_appointment"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="10dp"
							android:layout_marginTop="5dp"
							android:layout_marginEnd="10dp"
							android:layout_marginBottom="5dp"
							android:autoSizeTextType="uniform"
							android:fontFamily="@new"
							android:text="@string/schedule_an_appointment_string"
							android:textColor="@color/_bg__homescreen_ek2_color"
							android:textSize="16sp" />

					</RelativeLayout>

					// contact us informations

					<RelativeLayout
						android:id="@+id/frame_72"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@+id/sch_appoinmnt"
						android:layout_centerHorizontal="true"
						android:layout_marginStart="3dp"
						android:layout_marginTop="60dp"
						android:layout_marginBottom="20dp">


						<RelativeLayout
							android:id="@+id/contact_us_ek1"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_centerHorizontal="true"
							android:layout_marginStart="104.5dp"
							android:layout_marginTop="0dp">

							<TextView
								android:id="@+id/contact_us_ek2"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:fontFamily="Inter"
								android:text="@string/contact_us_ek2_string"
								android:textColor="@color/black"
								android:textSize="24sp"
								android:textStyle="bold" />

						</RelativeLayout>


						<RelativeLayout
							android:id="@+id/emailbox"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_below="@+id/contact_us_ek1"
							android:layout_marginStart="38.5dp"
							android:layout_marginTop="20dp">


							<RelativeLayout
								android:id="@+id/clarity_email_solid"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_marginStart="0dp"
								android:layout_marginTop="0dp">


								<RelativeLayout
									android:id="@+id/group"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:layout_marginStart="2.5dp"
									android:layout_marginTop="2.5dp">

									<ImageView
										android:id="@+id/vector_ek1"
										android:layout_width="16.08dp"
										android:layout_height="8.04dp"
										android:layout_marginStart="2dp"
										android:layout_marginTop="3dp"
										android:contentDescription="vector_ek1"
										android:src="@drawable/vector_ek1" />

									<ImageView
										android:id="@+id/vector_ek2"
										android:layout_width="17.78dp"
										android:layout_height="12.56dp"
										android:layout_marginStart="1dp"
										android:layout_marginTop="4dp"
										android:contentDescription="vector_ek2"
										android:src="@drawable/mailbox" />

									<ImageView
										android:id="@+id/vector_ek3"
										android:layout_width="20dp"
										android:layout_height="20dp"
										android:layout_marginStart="0dp"
										android:layout_marginTop="0dp"
										android:contentDescription="vector_ek3"
										android:src="@drawable/vector_ek3" />

								</RelativeLayout>

							</RelativeLayout>

							<TextView
								android:id="@+id/inquiries_mercurytaxmccowan_ca"
								android:layout_width="271dp"
								android:layout_height="34dp"
								android:layout_marginLeft="31dp"
								android:layout_marginTop="0dp"
								android:fontFamily="Inter"
								android:text="@string/inquiries_mercurytaxmccowan_ca_string"
								android:textColor="@color/black"
								android:textSize="14sp" />

						</RelativeLayout>


						<RelativeLayout
							android:id="@+id/phonebox"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_below="@+id/emailbox"
							android:layout_marginStart="38.5dp"
							android:layout_marginTop="5dp">


							<RelativeLayout
								android:id="@+id/akar_icons_phone"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_marginStart="0dp"
								android:layout_marginTop="0dp">

								<ImageView
									android:id="@+id/vector_ek4"
									android:layout_width="20dp"
									android:layout_height="20dp"
									android:layout_marginStart="2.5dp"
									android:layout_marginTop="2.5dp"
									android:contentDescription="vector_ek4"
									android:src="@drawable/phonecall" />

							</RelativeLayout>

							<TextView
								android:id="@+id/__416__265_3346"
								android:layout_width="271dp"
								android:layout_height="34dp"
								android:layout_marginLeft="31dp"
								android:layout_marginTop="0dp"
								android:fontFamily="Inter"
								android:text="@string/__416__265_3346_string"
								android:textColor="@color/black"
								android:textSize="14sp" />

						</RelativeLayout>


						<RelativeLayout
							android:id="@+id/addresbox"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_below="@+id/phonebox"
							android:layout_marginStart="38.5dp"
							android:layout_marginTop="5dp">


							<RelativeLayout
								android:id="@+id/akar_icons_location"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_marginStart="0dp"
								android:layout_marginTop="0dp">


								<RelativeLayout
									android:id="@+id/group_ek1"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:layout_marginStart="4.17dp"
									android:layout_marginTop="2.08dp">


									<ImageView
										android:id="@+id/vector_ek6"
										android:layout_width="16.67dp"
										android:layout_height="20.83dp"
										android:layout_marginStart="0dp"
										android:layout_marginTop="0dp"
										android:contentDescription="vector_ek6"
										android:src="@drawable/loction" />


								</RelativeLayout>

							</RelativeLayout>

							<TextView
								android:id="@+id/_212_2900_eglinton_avenue_east__scarborough__on"
								android:layout_width="271dp"
								android:layout_height="48dp"
								android:layout_marginLeft="31dp"
								android:layout_marginTop="0dp"
								android:fontFamily="Inter"
								android:text="@string/_comaddress"
								android:textColor="@color/black"
								android:textSize="14sp" />

						</RelativeLayout>


						<RelativeLayout
							android:id="@+id/openhrs"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_below="@+id/addresbox"
							android:layout_marginStart="38.5dp"
							android:layout_marginTop="5dp">


							<RelativeLayout
								android:id="@+id/ant_design_clock_circle_filled"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_marginStart="0dp"
								android:layout_marginTop="0dp">

								<ImageView
									android:id="@+id/vector_ek7"
									android:layout_width="21.88dp"
									android:layout_height="21.88dp"
									android:layout_marginStart="1.56dp"
									android:layout_marginTop="1.56dp"
									android:contentDescription="vector_ek7"
									android:src="@drawable/cl" />

							</RelativeLayout>

							<TextView
								android:id="@+id/m_f__10am_4pm__s_s__closed"
								android:layout_width="271dp"
								android:layout_height="48dp"
								android:layout_marginLeft="31dp"
								android:layout_marginTop="0dp"
								android:fontFamily="Inter"
								android:text="@string/m_f__10am_4pm__s_s__closed_string"
								android:textColor="@color/black"
								android:textSize="14sp" />

						</RelativeLayout>

					</RelativeLayout>
				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/personal_tax_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@+id/nav_bar_ek1"
					android:layout_centerHorizontal="true"
					android:layout_marginStart="0dp"
					android:layout_marginTop="10dp">

					<TextView
						android:id="@+id/personal_taxation_service_ek1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:autoSizeTextType="uniform"
						android:fontFamily="Inter"
						android:gravity="center"
						android:text="@string/personal_taxation_service_ek1_string"
						android:textColor="@color/our_story_color"
						android:textSize="20sp"
						android:textStyle="bold" />

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/personal_tax_services"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/content_pt"
					android:layout_centerHorizontal="true"
					android:layout_marginStart="0dp"
					android:layout_marginTop="20dp"
					android:background="#FCBA03">


					<RelativeLayout
						android:id="@+id/pr_service_point_titile"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerHorizontal="true"
						android:layout_marginStart="0dp"
						android:layout_marginTop="14dp">

						<TextView
							android:id="@+id/our_professional_services_include_"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_alignParentTop="true"
							android:layout_centerHorizontal="true"
							android:autoSizeTextType="uniform"
							android:fontFamily="Inter"

							android:text="@string/our_professional_services_include__ek1_string"
							android:textColor="@color/_bg__homescreen_ek2_color"
							android:textSize="16sp"
							android:textStyle="bold" />

					</RelativeLayout>


					<!--					<RelativeLayout-->
					<!--						android:id="@+id/pr_service_points"-->
					<!--						android:layout_width="wrap_content"-->
					<!--						android:layout_height="wrap_content"-->
					<!--						android:layout_below="@+id/pr_service_point_titile"-->
					<!--						android:layout_centerHorizontal="true"-->
					<!--						android:layout_marginStart="20dp"-->
					<!--						android:layout_marginTop="10dp"-->
					<!--						android:layout_marginEnd="10dp">-->

					<ListView
						android:id="@+id/mobile_list"
						android:layout_width="wrap_content"
						android:layout_height="400dp"
						android:layout_below="@+id/pr_service_point_titile"
						android:layout_marginTop="40dp"
						android:lineSpacingExtra="10sp" />


				</RelativeLayout>


				<!--				</RelativeLayout>-->


				<RelativeLayout
					android:id="@+id/nav_bar_ek1"
					android:layout_width="match_parent"
					android:layout_height="100dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@color/our_story_color"
					android:keepScreenOn="true"
					android:orientation="horizontal"
					tools:ignore="MissingConstraints">


					<RelativeLayout
						android:id="@+id/grommet_icons_menu_ek1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:layout_marginStart="18dp">

						<ImageView
							android:id="@+id/vector_ek30"
							android:layout_width="25dp"
							android:layout_height="25dp"
							android:layout_marginStart="2.83dp"
							android:contentDescription="vector_ek30"
							android:src="@drawable/menu" />

					</RelativeLayout>


					<TextView
						android:id="@+id/welcome_to_mercurytax_mccowan_ek1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerInParent="true"
						android:layout_marginBottom="5dp"
						android:fontFamily="Inter"
						android:gravity="center"
						android:text="@string/welcome_to_mercurytax_mccowan_ek1_string"
						android:textColor="@color/welcome_to_mercurytax_mccowan_color"
						android:textSize="18sp"
						android:textStyle="bold" />


				</RelativeLayout>

			</RelativeLayout>




		</RelativeLayout>

	</ScrollView>
